2008-07-02:
* Added: syncronizing file open dialog with current doc's dir
* Added: color selection for markers
* Added: unindention of selected text with Shift+Tab
* Added: --lrelease option to configure script


-------------------------------
Version 0.3-beta1
-------------------------------
* Added support for diff-files;
* Hopefully fixed bug with opening the current dir (appered 
* Added French, Portuguese localizations
* Added: packaging script for Debian-based distros
* Added: Java custom highlighting scheme
* Added: doc comments to C++ scheme
* Added: 'Replace tabs with spaces' option
* Improved settings dialog
* Fixed: bug with small window when the app was closed 
  maximized several times in a row;
* Added: configure script
* Added: saving of last session even if no name was given to it
* Added: restoring scrollbar and cursor position when 
  restoring session
* Fixed: bug with relative paths in filename (at statusbar)
* Fixed: copying highlighting schemes to home dir. Now checks 
  if every single file exists.
* Fixed: if the app was closed maximized, it doesn't restore 
  normal size when started again;
* Fixed: crash when tried to change 'Show line numbers' or 
  'Adjust by width' without any opened documents;
* Added: options 'Show indents' and 'Highlight current line'
  to Settings dialog;


-------------------------------
Version 0.3-dev
-------------------------------
* using QScintilla instead of QTextEdit;
* manual syntax highlighting selection;
* custom highlights for C++, Makefile, Python, HTML, XML, Bash, Perl, Ruby, JavaScript;
* updating markers menu;
* icon themes now at user home dir
* one built-in icon theme


-------------------------------
Exported from 0.2.1
-------------------------------
* Fixed: (Windows) sometimes wrong tab name appeared after 'Save as'
  action (relative or absolute file path instead of file name)
* Fixed: multiple asking 'what to do?' when file was modified by 
  external program