@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>433</width>
+    <width>522</width>
     <height>429</height>
    </rect>
   </property>
@@ -44,6 +44,17 @@
       <property name="spacing" >
        <number>6</number>
       </property>
+      <item row="1" column="0" >
+       <widget class="QCheckBox" name="showLineNumbersChk" >
+        <property name="toolTip" >
+         <string>Sets the default view of 
+newly created/opened docs</string>
+        </property>
+        <property name="text" >
+         <string>Show line numbers</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="0" >
        <layout class="QHBoxLayout" >
         <property name="margin" >
@@ -93,36 +104,20 @@
         </item>
        </layout>
       </item>
-      <item row="1" column="0" >
-       <widget class="QCheckBox" name="showLineNumbersChk" >
-        <property name="toolTip" >
-         <string>Sets the default view of 
-newly created/opened docs</string>
-        </property>
-        <property name="text" >
-         <string>Show line numbers</string>
-        </property>
-       </widget>
-      </item>
       <item row="3" column="0" >
        <widget class="QCheckBox" name="hlCurLineChk" >
         <property name="text" >
          <string>Highlight current line</string>
         </property>
-       </widget>
-      </item>
-      <item row="2" column="0" >
-       <widget class="QCheckBox" name="widthAdjustChk" >
-        <property name="toolTip" >
-         <string>Sets the default view of 
-newly created/opened docs</string>
+        <property name="checked" >
+         <bool>true</bool>
         </property>
-        <property name="text" >
-         <string>Adjust text by width</string>
+        <property name="tristate" >
+         <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="4" column="0" >
+      <item row="5" column="0" >
        <layout class="QHBoxLayout" >
         <property name="margin" >
          <number>0</number>
@@ -162,6 +157,53 @@ newly created/opened docs</string>
           </property>
           <property name="flat" >
            <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QCheckBox" name="widthAdjustChk" >
+        <property name="toolTip" >
+         <string>Sets the default view of 
+newly created/opened docs</string>
+        </property>
+        <property name="text" >
+         <string>Adjust text by width</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" >
+       <layout class="QHBoxLayout" >
+        <property name="margin" >
+         <number>0</number>
+        </property>
+        <property name="spacing" >
+         <number>6</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="label_5" >
+          <property name="text" >
+           <string>Current line highlighting color</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="curLineColorBtn" >
+          <property name="minimumSize" >
+           <size>
+            <width>40</width>
+            <height>26</height>
+           </size>
+          </property>
+          <property name="maximumSize" >
+           <size>
+            <width>70</width>
+            <height>26</height>
+           </size>
+          </property>
+          <property name="text" >
+           <string/>
           </property>
          </widget>
         </item>
@@ -351,6 +393,38 @@ whole indent instead of removind single whitespace</string>
     <hint type="destinationlabel" >
      <x>216</x>
      <y>151</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>hlCurLineChk</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>label_5</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>260</x>
+     <y>290</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>222</x>
+     <y>321</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>hlCurLineChk</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>curLineColorBtn</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>260</x>
+     <y>290</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>465</x>
+     <y>321</y>
     </hint>
    </hints>
   </connection>
